k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volodina-deployment-hw-1
  namespace: otus-hw-1-volodina
spec:
  selector:
    matchLabels:
      app: volodina-hw-1
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: volodina-hw-1
    spec:
      containers:            
        - image: elenkavolodina/otus_hw_1_fast_api:latest
          name: otus-hw-1-fast-api
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
