k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volodina-hw-1-service
  namespace: otus-hw-1-volodina
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: volodina-hw-1
